Fix various warnings in javahl
[in subversion/bindings/javahl]
* src/org/apache/subversion/javahl/types/RevisionRange.java,
  tests/org/apache/subversion/javahl/BasicTests.java,
  tests/org/apache/subversion/javahl/SVNRemoteTests.java:
    Use "Long.valueOf(long)" instead of deprecated "new Long(long)"

* native/RemoteSession.cpp, native/RemoteSession.h,
  native/org_apache_subversion_javahl_remote_RemoteSession.cpp,
  native/org_apache_subversion_javahl_util_ConfigImpl_Category.cpp,
  native/org_apache_subversion_javahl_util_PropLib.cpp: Rename "jvalue"
    variables to fix -Wshadow warnings for jvalue symbol in jni.h


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@1849449 13f79535-47bb-0310-9956-ffa450edef68